JS_CH08_09_10_HW completed

--- a/labs/JS_CH06_LAB/register_2.0/index.html
+++ b/labs/JS_CH06_LAB/register_2.0/index.html
@@ -37,6 +37,8 @@
                     value="text" checked>Text
                 <input type="radio" name="contact" id="email"
                     value="email">Email
+                <input type="radio" name="contact" id="mobile"
+                    value="mobile">Mobile phone
                 <input type="radio" name="contact" id="none"
                     value="none">Don't contact me
             </div>
@@ -44,6 +46,11 @@
                 <label>Terms of Service:</label>
                 <input type="checkbox" name="terms" id="terms"
                     value="yes">I accept
+                <span>*</span>
+            </div>
+            <div>
+                <label for="comments">Comments:</label>
+                <textarea name="comments" id="comments" row="5" cols="40"></textarea>
                 <span>*</span>
             </div>
             <div>
