--- a/labs/JS_CH07_LAB/preloadRollover/index.html
+++ b/labs/JS_CH07_LAB/preloadRollover/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Image Rollover</title>
+    <title>Image Preload Rollover</title>
     <link rel="stylesheet" type="text/css" href="preloadRollover.css">
 
 </head>
